# auto-doc-practice

./: .gitignore  mkdocs.yml  pyproject.toml
.github/: deploy.yml
.github/workflows/: deploy.yml  doc.yml  publish.yml  release.yml  test.yml
app/: objs.py  schema.py
docs/: how-to-guides.md  new-page.md
site/: 404.html  index.html  objects.inv
site/how-to-guides/: index.html
tests/: test_objs.py
