[tool.poetry]
name = "auto-doc-practice"
version = "0.1.0"
description = ""
authors = ["Yu Chen, Yang <ycy.tai@gmail.com>"]
readme = "README.md"
packages = [{include = "auto_doc_practice"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.6.0"
mkdocstrings = {extras = ["python"], version = "^0.25.2"}
mkdocs-material = "^9.5.33"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
